# axum-sqlx-mockall-todos

./: Cargo.toml  README.md  sqlite.db
migrations/: 0_init.sql
src/: app.rs  db.rs  endpoints.rs  lib.rs  main.rs  provider.rs
tests/: integration_tests.rs
tests/fixtures/: todos.sql
